--- a/src/homepage/faqs/faqs.component.html
+++ b/src/homepage/faqs/faqs.component.html
@@ -16,7 +16,7 @@
 
 <div class="faqs">
     <h3 class="title">Frequently Asked Questions</h3>
-    <div ngbAccordion [closeOthers]="false">
+    <div ngbAccordion [closeOthers]="true">
         <div ngbAccordionItem *ngFor="let quest of questions">
             <div ngbAccordionHeader class="questions">
                 <button ngbAccordionButton>
